# CoreRobotics

./: .gitignore  .gitlab-ci.yml  CMakeLists-original.txt  CMakeLists.txt  CMakeLists2.txt  CoreRoboticsConfig.cmake.in  CoreRoboticsConfigVersion.cmake.in  Dockerfile  LICENSE.md  README.md  README2.md  cleanDSStore.m  codecov.yml  codemeta.json  contributing.md  paper.bib  paper.md  uw_server.txt
cpp/: CMakeLists.txt  mac_xcode_notes.rtf
cpp/CoreRobotics.xcodeproj/: project.pbxproj
cpp/doc/: doxyfile  doxygen
cpp/src/: CoreRobotics.hpp  crTest.cpp  makefile
cpp/utils/: CRTestCore.cpp  CRTestFrameOffset.cpp  CRTestModels.cpp  CRTestModules.cpp  CRTestModules.hpp  crTest.cpp  crTestModules.cpp  crTestModules.h  crTestPhysics.cpp  test_CRCore.cpp  test_CRHardLimits.cpp  test_CRInverseKinematics.cpp  test_CRManipulator.cpp  test_CRMath.cpp  test_CRMotionLinear.cpp  test_CRMotionModel.cpp  test_CRMotionProbabilistic.cpp  test_CRNoiseDirac.cpp  test_CRNoiseGaussian.cpp  test_CRNoiseMixture.cpp  test_CRNoiseModel.cpp  test_CRNoiseUniform.cpp  test_CRNullSpace.cpp  test_CRSensorLinear.cpp  test_CRSensorModel.cpp  test_CRSensorProbabilistic.cpp  test_CRTrajectoryGenerator.cpp
examples/example_CRInverseKinematics/: CMakeLists.txt  example_CRInverseKinematics.cpp
matlab/: CMakeLists.txt
matlab/+CoreRobotics/: Frame.m  Frame2D.m  Frame3D.m  FrameDH.m  Inertia.m  InputHandler.m  KalmanFilter.m  Manipulator.m  Math.m  MotionModelLG.m  NoiseModelGaussian.m  RigidBody.m  SensorModelLG.m
matlab/examples/: DynamicRobotExample2D.m  EstimationExampleLinear.m  KinovaExampleVREP.m  KinovaExampleVREP.ttt  RobotExample2D.m  RobotExample3D.m  example_CRCore.m  example_CRInverseKinematics.m  example_CRManipulator.m
matlab/lib/: SwigRef.m
matlab/src/: matlabHelpers.hpp
matlab/swig/: CoreRobotics.i  CoreRoboticsMATLAB_wrap.cxx  matlab.dox
matlab/util/: CRTestModules.m  test_CRCore.m  test_CRKalmanFilter.m  test_CRManipulator.m  test_CRTrajectoryGenerator.m
matlab/utils/: 21-Jan-2017.mat  perfEvalManipulator.m  testLib.m
python/: CMakeLists.old.txt  CMakeLists.txt
python/examples/: CRTestModules.py  cr-ex-core.py  cr-ex-noise.py  cr-example-Core.py  cr-example-Math.py  cr-example-control.py  cr-example-core.py  cr-example-math.py  cr-example-runtime.py  cr-examples  example_CRCore.py  example_CRFrameDh.py  example_CRInverseKinematics.py  example_CRNullSpace.py  example_CRTrajectoryGenerator.py  test_CRCore.py  test_CRFrameDh.py  test_CRHardLimits.py
python/lib/: CoreRobotics.py
python/src/: PyCoreRobotics.cpp  PyCoreRobotics.hpp  PyModuleControl.cpp  PyModuleCore.cpp  PyModuleMath.cpp  PyModuleModel.cpp  PyModuleRuntime.cpp
python/swig/: CoreRobotics.i  CoreRoboticsPYTHON_wrap.cxx  python.dox
python/util/: CRTestModules.py  test_CRCore.py  test_CRFrameDh.py  test_CRHardLimits.py  test_CRKalmanFilter.py  test_CRManipulator.py  test_CRNullSpace.py
src/: CMakeLists.txt  CoreRobotics.hpp
src/CoreRobotics/: Core  Noise
src/aspect/: Action.hpp  Measurement.hpp  Parameter.hpp  State.hpp  Temporal.hpp
src/control/: CRHardLimits.cpp  CRHardLimits.hpp  CRInverseKinematics.cpp  CRInverseKinematics.hpp  CRNullSpace.cpp  CRNullSpace.hpp  CRTrajectoryGenerator.cpp  CRTrajectoryGenerator.hpp  HardLimits.cpp  HardLimits.hpp  InverseKinematics.cpp  InverseKinematics.hpp  MinimumJerk.cpp  MinimumJerk.hpp  NullSpace.cpp  NullSpace.hpp  Policy.hpp  StateFeedback.hpp  TrajectoryGenerator.cpp  TrajectoryGenerator.hpp  Types.hpp
src/controllers/: CRHardLimits.cpp  CRHardLimits.hpp  CRInverseKinematics.cpp  CRInverseKinematics.hpp  CRNullSpace.cpp  CRNullSpace.hpp  CRTrajectoryGenerator.cpp  CRTrajectoryGenerator.hpp  HardLimits.cpp  HardLimits.hpp  InverseKinematics.cpp  InverseKinematics.hpp  NullSpace.cpp  NullSpace.hpp  TrajectoryGenerator.cpp  TrajectoryGenerator.hpp
src/core/: CRBaseItem.hpp  CRClock.cpp  CRClock.hpp  CRItem.hpp  CRLoop.cpp  CRLoop.hpp  CRLoopElement.hpp  CRLoopRoot.hpp  CRMutex.cpp  CRMutex.hpp  CRProperties.hpp  CRSharedMemory.cpp  CRSharedMemory.hpp  CRThread.cpp  CRThread.hpp  CRThreadLoop.cpp  CRThreadLoop.hpp  CRThreadLoopElement.hpp  CRTypes.hpp  Clock.cpp  Clock.hpp  DirectedGraph.cpp  DirectedGraph.hpp  Item.hpp  Loop.cpp  Loop.hpp  LoopElement.hpp  Mutex.cpp  Mutex.hpp  Settings.hpp  SharedMemory.cpp  SharedMemory.hpp  Signal.cpp  Signal.hpp  Slot.cpp  Slot.hpp  Step.hpp  StepList.cpp  StepList.hpp  Thread.cpp  (+2 more)
src/cr/: Control  Signal  aspect  control  core  estimation  math  model  noise  physics  runtime  signal  world
src/cr1/: CMakeLists.txt
src/estimation/: KalmanFilter.cpp  KalmanFilter.hpp
src/estimators/: CRKalmanFilter-stash.hpp  CRKalmanFilter.cpp  CRKalmanFilter.hpp  CRParticleFilter.cpp  CRParticleFilter.hpp
src/math/: CRConversion.hpp  CRIntegration.cpp  CRIntegration.hpp  CRMath.cpp  CRMath.hpp  CRMatrix.cpp  CRMatrix.hpp  Conversion.cpp  Conversion.hpp  Integration.cpp  Integration.hpp  Matrix.cpp  Matrix.hpp  Probability.cpp  Probability.hpp
src/model/: CRGmm.cpp  CRGmm.hpp  CRManipulator.cpp  CRManipulator.hpp  CRMotionLinear.cpp  CRMotionLinear.hpp  CRMotionModel.cpp  CRMotionModel.hpp  CRMotionProbabilistic.cpp  CRMotionProbabilistic.hpp  CRNoiseMixture.cpp  (+28 more)
tests/: CMakeLists.txt  TestModules.cpp  counterStep.hpp  customType.hpp  simpleStep.hpp  test_Apect.cpp  test_CRClock.cpp  test_CRConversion.cpp  test_CRFrame.cpp  test_CRFrameDh.cpp  test_CRFrameEuler.cpp  test_CRGmm.cpp  test_CRHardLimits.cpp  test_CRIntegration.cpp  test_CRInverseKinematics.cpp  test_CRLoop.cpp  test_CRManipulator.cpp  test_CRMatrix.cpp  test_CRMotionLinear.cpp  test_CRMotionModel.cpp  test_CRMotionProbabilistic.cpp  test_CRNoiseGaussian.cpp  test_CRNoiseMixture.cpp  test_CRNoiseModel.cpp  test_CRNoiseUniform.cpp  test_CRNullSpace.cpp  test_CRRigidBody.cpp  test_CRSensorLinear.cpp  test_CRSensorModel.cpp  test_CRSensorProbabilistic.cpp  test_CRSharedMemory.cpp  test_CRThread.cpp  test_CRThreadLoop.cpp  test_CRTrajectoryGenerator.cpp  test_Clock.cpp  test_Connection.cpp  test_Conversion.cpp  test_DynamicalSystem.cpp  test_Frame.cpp  test_FrameDh.cpp  (+36 more)
(+636 files in other folders)
